--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ ZZ
             <p>Name>>><span>Ashish kumar </span>.</p>
             <p>Email>>><span>at498469@Gmail.Com </span>.</p>
             <p>Phone>>><span>6397599080</span>.</p>
-            <p>Welcome to my portfolio! I’m <span style="font-style: italic ;">Ashish kumar</span>, a passionate [<span>Data analyst</span> ] with a keen eye for detail and a drive for innovation. I have honed my skills in [Excel,python,Mysql,PowerBI,Basic C/C++,Java].</p>
+            <p>Welcome to my portfolio! I’m <span style="font-style: italic ;">Ashish kumar</span>, a passionate [<span>Data analyst</span> ] with a keen eye for detail and a drive for innovation. I have honed my skills in [Excel,python,Mysql,PowerBI].</p>
         
             <div class="cvContent">
                 <a href="#" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
